exports[`organization rest endpoint should add model 1`] = `
Array [
  Object {
    "__v": 0,
    "analyses": Array [],
    "groups": Array [],
    "name": "test-org",
    "sites": Array [],
  },
]
`;

exports[`organization rest endpoint should get model 1`] = `
Object {
  "__v": 0,
  "analyses": Array [],
  "groups": Array [],
  "name": "test-org",
  "sites": Array [],
}
`;

exports[`organization rest endpoint should update model 1`] = `
Object {
  "__v": 0,
  "analyses": Array [],
  "groups": Array [],
  "name": "updated name",
  "sites": Array [],
}
`;
